--- a/src/Components/EnemyBar/EnemyBar.module.scss
+++ b/src/Components/EnemyBar/EnemyBar.module.scss
@@ -19,6 +19,17 @@
   height: 120px;
   position: relative;
 
+  .hp {
+    position: absolute;
+    z-index: 10;
+    bottom: 0;
+    right: 0;
+    background-color: $bgStats;
+    color: $white;
+    padding: 5px;
+    font-weight: 900;
+    font-size: 30px;
+  }
   p {
     position: absolute;
     z-index: 10;
@@ -40,4 +51,34 @@
   width: 120px;
   display: flex;
   flex-direction: column;
+}
+.damageHP {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.subHP {
+  font-size: 30px;
+  font-weight: 900;
+  padding: 5px;
+  background-color: $black;
+  border-radius: 100%;
+  letter-spacing: 0px;
+  color: $damageCard;
+  animation-duration: 2s;
+  animation-name: hpDamage;
+}
+@keyframes hpDamage {
+  0% {
+    transform: translateY(30px) translate(-50%, -50%);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-20px) translate(-50%, -50%);
+    opacity: 0;
+  }
 }
