--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -4,6 +4,7 @@ $grayBtn: #706868;
 $black: #0a0202;
 $green: #26b410;
 $gold: #f8e402;
+$damageCard: #e31515;
 $blackTrans: rgba(10, 2, 2, 0.39);
 $bgStats: rgba(145, 144, 144, 0.28);
 $boxShadowCard: -5px 9px 8px 0px rgba(34, 60, 80, 0.2);
