--- a/src/Components/CardBar/Card/Card.module.scss
+++ b/src/Components/CardBar/Card/Card.module.scss
@@ -6,7 +6,6 @@
   img {
     height: 100%;
     width: 100%;
-    object-fit: contain;
     border: 1px solid red;
   }
 }
@@ -15,7 +14,7 @@
 }
 .body {
   flex: 0 0 25%;
-
+  height: 100px;
   padding: 5px;
 }
 
